configurado e funcionando inicial

--- a/.settings/com.vaadin.integration.eclipse.prefs
+++ b/.settings/com.vaadin.integration.eclipse.prefs
@@ -1,5 +1,6 @@
-#Wed Jan 18 13:41:05 BRST 2012
+#Wed Jan 18 14:16:25 BRST 2012
 com.vaadin.integration.eclipse.projectTypeGae=true
 com.vaadin.integration.eclipse.useLatestNightly=false
-com.vaadin.integration.eclipse.widgetsetDirty=false
+com.vaadin.integration.eclipse.widgetsetCompilationEta=54290
+com.vaadin.integration.eclipse.widgetsetDirty=true
 eclipse.preferences.version=1
