--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -16,6 +16,12 @@
 			<param-name>application</param-name>
 			<param-value>com.example.testevaadin.TestevaadinApplication</param-value>
 		</init-param>
+		<init-param>
+			<description>
+			Application widgetset</description>
+			<param-name>widgetset</param-name>
+			<param-value>com.example.testevaadin.widgetset.TestevaadinWidgetset</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Testevaadin Application</servlet-name>
